# polyglot-lambda-examples

./: .gitignore  README.md
goLambda/: go.mod  template.yaml
goLambda/cmd/: main.go
goLambda/internal/usecases/: usecases.go
goLambda/pkg/errors/: errors.go  http_error.go
goLambda/pkg/lambdamiddleware/: lambdamiddleware.go
goLambda/pkg/logger/: logger.go
goLambda/pkg/pokemon/: pokemon.go  repository.go
goLambda/pkg/pokemon/infrastructure/pokeapirepo/: pokeapirepo.go
goLambda/pkg/user/: object_values.go  repository.go  user.go
goLambda/pkg/user/infrastructure/userdynamorepo/: userdynamo.go
rust_lambda/: Cargo.toml
rust_lambda/backend/: Cargo.toml
rust_lambda/backend/src/: main.rs  models.rs  use_cases.rs
rust_lambda/lib/: Cargo.toml
rust_lambda/lib/src/: lib.rs
rust_lambda/lib/src/errors/: errors.rs  http_errors.rs  mod.rs
rust_lambda/lib/src/logger/: logger.rs
rust_lambda/lib/src/middlewares/: lambda_middleware.rs  mod.rs
rust_lambda/lib/src/pokemon/: mod.rs  pokemon_repository.rs  pokemon_type.rs
rust_lambda/lib/src/pokemon/infrastructure/: mod.rs  pokeapi_repo.rs
rust_lambda/lib/src/user/: mod.rs  objects_values.rs  user_repository.rs  user_type.rs
rust_lambda/lib/src/user/infrastructure/: dynamo_repository.rs  mod.rs
