[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4.0",features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1.71"
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_28"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
lambda_runtime = "0.3"
log = "0.4"
rand = "0.8.5"
lambda_http = "0.8.1"
